# markupsite

./: .gitignore  README.md  pyproject.toml
main/: gen.py
main/templates/: main.html  warn.html
main/templates/output/: index.html
main/templates/output/etc/: main.css  menu.js
main/templates/output/etc/prism/: prism.css  prism.js
tests/content/: test.md
tests/output/: test.html  test_menu.html  test_target.html
tests/output/static/: menu_data.json
